# pycaret

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PLOT_FIX_SUMMARY.md  PLOT_RENDERING_FIX.md  PROJECT_SETUP_SUMMARY.md  QUICK_START.md  README.md  TESTING_FIXES.md  TESTING_GUIDE.md  UV_SETUP.md  main.py  package-lock.json  pyproject.toml  quick_test.sh  test_plot_generation.py
.cursor/rules/: brd.mdc
examples/sample_datasets/: classification_sample.csv  create_sample_data.py  regression_sample.csv
src/: __init__.py  app.py
src/modules/: __init__.py  config_manager.py  data_handler.py  model_manager.py  pycaret_wrapper.py  state_manager.py  visualization.py
src/ui/: __init__.py
src/utils/: __init__.py  constants.py
