[project]
name = "pycaret-ml-workflow-manager"
version = "0.1.0"
description = "Gradio-based web application for PyCaret machine learning workflows"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gradio>=4.0.0",
    "pycaret>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.14.0",
    "openpyxl>=3.1.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
